--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           data-aos-duration="800"
           id="education"
           class="nameHeading fw-bold" style="margin-top: 100px;">EDUCATION</h1>
-  
+          <div class="containerzz">
           <div class="card EDUCATIONCARD" >
             <!-- <img src="assets/img/pp.jpg" class="card-img-top" alt=""> -->
             <div class="card-body">
@@ -103,11 +103,24 @@
               <p class="card-text">Sebuah Universitas di Kabupaten Jember.</p>
             </div>
           </div>
+        </div>
 
         </section>
-        <svg class="GGG"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#000000" fill-opacity="1" d="M0,96L60,80C120,64,240,32,360,37.3C480,43,600,85,720,112C840,139,960,149,1080,149.3C1200,149,1320,139,1380,133.3L1440,128L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
-        <svg class="GGGG"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#000000" fill-opacity="1" d="M0,224L34.3,208C68.6,192,137,160,206,144C274.3,128,343,128,411,138.7C480,149,549,171,617,202.7C685.7,235,754,277,823,293.3C891.4,309,960,299,1029,266.7C1097.1,235,1166,181,1234,149.3C1302.9,117,1371,107,1406,101.3L1440,96L1440,0L1405.7,0C1371.4,0,1303,0,1234,0C1165.7,0,1097,0,1029,0C960,0,891,0,823,0C754.3,0,686,0,617,0C548.6,0,480,0,411,0C342.9,0,274,0,206,0C137.1,0,69,0,34,0L0,0Z"></path></svg><!-- <svg class="GGGG" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#000000" fill-opacity="1" d="M0,224L0,160L240,160L240,288L480,288L480,32L720,32L720,256L960,256L960,192L1200,192L1200,160L1440,160L1440,320L1200,320L1200,320L960,320L960,320L720,320L720,320L480,320L480,320L240,320L240,320L0,320L0,320Z"></path></svg> -->
         <!-- <svg xmlns="http://www.w3.org/2000/" viewBox="0 0 1440 320"><path fill="#000000" fill-opacity="1" d="M0,96L0,128L160,128L160,96L320,96L320,160L480,160L480,96L640,96L640,288L800,288L800,96L960,96L960,256L1120,256L1120,192L1280,192L1280,128L1440,128L1440,0L1280,0L1280,0L1120,0L1120,0L960,0L960,0L800,0L800,0L640,0L640,0L480,0L480,0L320,0L320,0L160,0L160,0L0,0L0,0Z"></path></svg> -->
+        <section class="ACHIEV">
+          <div>
+            <h1 class="ACHJDL" style="margin-top: 500px;"> ACHIEVMENT
+              <h4>HELOO</h4>
+              <h4>HELOO</h4>
+              <h4>HELOO</h4>
+              <h4>HELOO</h4>
+            </h1>
+          </div>
+        </section>
+        <section>
+          <svg class="GGG"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#000000" fill-opacity="1" d="M0,96L60,80C120,64,240,32,360,37.3C480,43,600,85,720,112C840,139,960,149,1080,149.3C1200,149,1320,139,1380,133.3L1440,128L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
+          <svg class="GGGG"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#000000" fill-opacity="1" d="M0,224L34.3,208C68.6,192,137,160,206,144C274.3,128,343,128,411,138.7C480,149,549,171,617,202.7C685.7,235,754,277,823,293.3C891.4,309,960,299,1029,266.7C1097.1,235,1166,181,1234,149.3C1302.9,117,1371,107,1406,101.3L1440,96L1440,0L1405.7,0C1371.4,0,1303,0,1234,0C1165.7,0,1097,0,1029,0C960,0,891,0,823,0C754.3,0,686,0,617,0C548.6,0,480,0,411,0C342.9,0,274,0,206,0C137.1,0,69,0,34,0L0,0Z"></path></svg><!-- <svg class="GGGG" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#000000" fill-opacity="1" d="M0,224L0,160L240,160L240,288L480,288L480,32L720,32L720,256L960,256L960,192L1200,192L1200,160L1440,160L1440,320L1200,320L1200,320L960,320L960,320L720,320L720,320L480,320L480,320L240,320L240,320L0,320L0,320Z"></path></svg> -->
+        </section>
         <section class="organisasi">
             <h1 class="text-center "
             data-aos="fade-up"
