--- a/index.html
+++ b/index.html
@@ -138,7 +138,26 @@
             class="nameHeading fw-bold">
             ORGANIZATION
             </h1>
-            
+            <div class="kartu">
+            <div class="card" >
+              <img src="assets/img/satgas.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h2 class="card-title">SATGAS SMANSAMORE</h2>
+                <h6 class="card-text" >Jabatan : Ketua umum</h6>
+                <h6 class="card-text" >Periode : 2022/2023</h6>
+                <p class="card-text">dsadsadsa</p>
+              </div>
+            </div>
+            <div class="card" >
+              <img class="laos" src="assets/img/logo LAOS.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h2 class="card-title">LINUX & OPEN SOURCE</h2>
+                <h6 class="card-text" >Jabatan : Staff Pemrograman</h6>
+                <h6 class="card-text" >Periode : 2025</h6>
+                <p class="card-text">dsadsadsa</p>
+              </div>
+            </div>
+          </div>
         </section>
 
 
