--- a/index.html
+++ b/index.html
@@ -98,27 +98,35 @@
           id="education"
           class="nameHeading fw-bold" style="margin-top: 100px;">EDUCATION</h1>
           <div class="containerzz">
+
           <div class="card EDUCATIONCARD" >
+            <img class="card-img sd" src="assets/img/sd.png" alt="">
             <div class="card-body">
-                <h2 ">SDN 4 Sumbergondo</h2>
+                <h2 class="card-title">SDN 4 Sumbergondo</h2>
               <p class="card-text" style="text-align: justify ;">Sebuah SD di Desa Sumbergondo, yang menjadi awal dimulainya perjalananku.</p>
             </div>
           </div>
+
           <div class="card EDUCATIONCARD" >
+            <img class="card-img smp" src="assets/img/smp.png" alt="">
             <div class="card-body">
-                <h2 ">SMPN 2 Genteng</h2>
+                <h2 class="card-title">SMPN 2 Genteng</h2>
               <p class="card-text">Sebuah SMP berada di kecamatan Genteng, Kabupaten Banyuwangi. </p>
             </div>
           </div>
+
           <div class="card EDUCATIONCARD" >
+            <img class="card-img sma" src="assets/img/sma.png" alt="">
             <div class="card-body">
-                <h2 >SMAN Glenmore</h2>
+                <h2 class="card-title">SMAN Glenmore</h2>
               <p class="card-text">Sebuah SMA yang terletak di Kecamatan Glenmore, Kabupaten Banyuwangi.</p>
             </div>
           </div>
+
           <div class="card EDUCATIONCARD" >
+            <img class="card-img unej" src="assets/img/unej.png" alt="">
             <div class="card-body">
-                <h2>Universitas Jember</h2>
+                <h2 class="card-title">Universitas Jember</h2>
               <p class="card-text">Sebuah Universitas di Kabupaten Jember.</p>
             </div>
           </div>
