--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
           <div class="card EDUCATIONCARD" >
             <img class="card-img sd" src="assets/img/sd.png" alt="">
-            <div class="card-body">
+            <div class="card-body sdbody">
                 <h2 class="card-title">SDN 4 Sumbergondo</h2>
               <p class="card-text" style="text-align: justify ;">Sebuah SD di Desa Sumbergondo, yang menjadi awal dimulainya perjalananku.</p>
             </div>
@@ -109,7 +109,7 @@
 
           <div class="card EDUCATIONCARD" >
             <img class="card-img smp" src="assets/img/smp.png" alt="">
-            <div class="card-body">
+            <div class="card-body smpbody">
                 <h2 class="card-title">SMPN 2 Genteng</h2>
               <p class="card-text">Sebuah SMP berada di kecamatan Genteng, Kabupaten Banyuwangi. </p>
             </div>
@@ -117,7 +117,7 @@
 
           <div class="card EDUCATIONCARD" >
             <img class="card-img sma" src="assets/img/sma.png" alt="">
-            <div class="card-body">
+            <div class="card-body smabody">
                 <h2 class="card-title">SMAN Glenmore</h2>
               <p class="card-text">Sebuah SMA yang terletak di Kecamatan Glenmore, Kabupaten Banyuwangi.</p>
             </div>
@@ -125,7 +125,7 @@
 
           <div class="card EDUCATIONCARD" >
             <img class="card-img unej" src="assets/img/unej.png" alt="">
-            <div class="card-body">
+            <div class="card-body unejbody">
                 <h2 class="card-title">Universitas Jember</h2>
               <p class="card-text">Sebuah Universitas di Kabupaten Jember.</p>
             </div>
